--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
 <h3>Enter two numbers, the result will be computed:</h3>
 <form action="#" th:action="@{/}" th:object="${myNumbers}" method="post">
-    <input type="text" th:field="*{n1}" required="required"/>
-    + <input type="text" th:field="*{n2}" required="required"/>
+    <input type="text" th:field="*{n1}" required="required" class="input" placeholder="3"/>
+    + <input type="text" th:field="*{n2}" required="required" class="input" placeholder="5"/>
     <p></p>
-    <input type="submit" value="Submit"/>
+    <input type="submit" value="Submit" class="myButton"/>
 </form>
 <h3>Result: <span th:text="${sum}"></span>
 </h3>
