--- a/src/main/resources/templates/log.html
+++ b/src/main/resources/templates/log.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="refresh" content="30"/>
     <title>Log Page</title>
 </head>
 <body>
